# Haskell

./: README.md  bin  bruh  bruh.hi  bruh.hs  concho  concho.hi  concho.hs  concho2.hs  h2  h2.hi  h2.hs  note.text  test  test.hi  test.hs
8. Making Our Own Types and Typeclasses/: Derived instances  Type synonyms.hs  Type_parameters  Type_parameters.hs  functor  functor.hi  functor.hs  hs  person.hi  person.hs  recursive_data_structures  typeclass102.hi
9. Input and Output/: hs
Haskell_Book/: Doc  README.md  hs.fdb_latexmk  hs.tex
Haskell_Book/01/: hs.aux  hs.fls  hs.tex
Haskell_Book/02/: 2.aux  2.fdb_latexmk  2.fls  2.tex
Haskell_Book/03/: .latexmkrc  03.hs  03.tex  Reverse.hs
Haskell_Book/04/: 04.hs  GreetIfCool1.hs  greetIfCool2.hs  hs.aux  hs.fdb_latexmk  hs.fls  hs.tex
Haskell_Book/05/: 05.hs  determineTheType.hs  hs.aux  hs.fdb_latexmk  hs.fls  hs.tex  typeInference2.hs
Haskell_Book/06/: 207.hs  6.aux  6.fdb_latexmk  6.fls  6.hs  6.tex
Haskell_Book/07/: .latexmkrc  7.hs  7.tex  Guards.hs  arith2.hs  arith4.hs  hs.aux  hs.fdb_latexmk  hs.fls  hs.hs  hs.tex  registeredUser1.hs
Haskell_Book/08/: 8.aux  8.fdb_latexmk  8.fls  8.hs  8.tex  wordnumber.hs
Haskell_Book/09/: 9.aux  (+6 more)
Haskell_Book/13/Hangman/hangman/: hangman.cabal
Haskell_Book/13/Hangman/hangman/data/: dict.txt
Haskell_Book/13/Hangman/hangman/src/: Main.hs
Haskell_Book/13/Hangman/hangman/test/: test.hs
Haskell_Book/13/meo/: hello.cabal
Haskell_Book/13/meo/src/: Meo.hs
Modules/: Geometry.hi  hs.hs  map  map.hs  set  set.hs  testGeometry  testGeometry.hi  testGeometry.hs
Project Euler/: 48  48.hi  48.hs  50  50.hi  50.hs  83  83.hi  83.hs
trash/: Cho.hs  hs.hs
(+164 files in other folders)
